# mcmf_data_collector

./: .gitignore  main.py  pyproject.toml
data_collection/: __init__.py  paths.py
data_collection/web_processor/: form.py  pages.py
data_collection/web_processor/common/: header.py
