[tool.poetry]
name = "data-collection"
version = "0.1.0"
description = ""
authors = ["Santo"]
readme = "README.md"
packages = [{include = "data_collection"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
